add modal popup + adaptive + start capture popup

--- a/app/index.html
+++ b/app/index.html
@@ -372,7 +372,7 @@
                   санкт - петербург
                 </div>
               </h1>
-              <div class="screen__btn global-btn global__btn-contact main-btn">
+              <div data-modal class="screen__btn global-btn global__btn-contact main-btn">
                 БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
               </div>
             </div>
@@ -499,9 +499,9 @@
 
 
         <div class="global__inner-btn">
-          <a class="global__btn-contact global-btn main-btn" href=#>
+          <div data-modal class="global__btn-contact global-btn main-btn">
             ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
-          </a>
+          </div>
         </div>
       </section>
 
@@ -719,84 +719,84 @@
             </div>
 
             <div class="questions__item global__item-bg">
-                 <div class="questions__item-inners">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какие гарантии вы даёте на вашу работу?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+              <div class="questions__item-inners">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Какие гарантии вы даёте на вашу работу?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
                 </div>
-              </div>
-              <p class="questions__item-text text">
-                Мы даем гарантию на всю нашу работу 2 года,
-                <br>
-                <br>
-                +1 год при заключении сервисного договора.
-              </p>
+                <p class="questions__item-text text">
+                  Мы даем гарантию на всю нашу работу 2 года,
+                  <br>
+                  <br>
+                  +1 год при заключении сервисного договора.
+                </p>
               </div>
             </div>
 
             <div class="questions__item global__item-bg">
               <div class="questions__item-inners">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какие данные нужны для предварительного расчета бассейна?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Какие данные нужны для предварительного расчета бассейна?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
                 </div>
-              </div>
-              <p class="questions__item-text text">
-                Что бы сделать предварительный расчет нам потребуется:
-                <br>
-                <br>
-                Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
-                предварительной консультации
+                <p class="questions__item-text text">
+                  Что бы сделать предварительный расчет нам потребуется:
+                  <br>
+                  <br>
+                  Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
+                  предварительной консультации
 
-              </p>
+                </p>
               </div>
             </div>
 
             <div class="questions__item global__item-bg">
               <div class="questions__item-inners">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Чем вы оборудуете бассейн?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Чем вы оборудуете бассейн?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
                 </div>
-              </div>
-              <p class="questions__item-text text">
-                Мы не являемся производителем и продавцами оборудования.
-                <br>
-                То есть не ограничиваемся «собственным»
-                ассортиментом и подберем для вас наилучший и оптимальный вариант
-              </p>
+                <p class="questions__item-text text">
+                  Мы не являемся производителем и продавцами оборудования.
+                  <br>
+                  То есть не ограничиваемся «собственным»
+                  ассортиментом и подберем для вас наилучший и оптимальный вариант
+                </p>
               </div>
             </div>
 
             <div class="questions__item global__item-bg">
               <div class="questions__item-inners">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Нужен бассейн «под ключ»
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Нужен бассейн «под ключ»
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
                 </div>
+                <p class="questions__item-text text">
+                  Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных
+                  работ
+                  и сдачи Заказчику.
+                </p>
               </div>
-              <p class="questions__item-text text">
-                Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных
-                работ
-                и сдачи Заказчику.
-              </p>
-            </div>
             </div>
           </div>
 
@@ -1270,6 +1270,101 @@
         </div>
 
       </section>
+
+
+
+
+      <div class="modal">
+        <div class="modal__inner">
+          <div class="container">
+            <div class="modal__wrapper">
+
+              <ul data-close class="close__btn">
+                <li class="close__line close__line1"></li>
+                <li class="close__line close__line2"></li>
+              </ul>
+
+              <h2 class="modal__title title">
+                Оставить заявку
+              </h2>
+
+              <form class="feedback-form">
+                <div class="feedback__inner">
+
+
+                  <div class="feedback__wrapper">
+                    <div class="feedback__input__wrapper">
+                      <div class="global__item-bg">
+                        <input class="feedback__item text" type="text" name="name" placeholder="Ваше имя..." required>
+                      </div>
+                    </div>
+                    <div class="feedback__input__wrapper">
+                      <div class="global__item-bg">
+                        <input class="feedback__item text" type="text" name="phone" id="phone"
+                          placeholder="+7 (___) ___-__-__" required>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="feedback__input__wrapper">
+                    <div class="global__item-bg">
+                      <textarea class="feedback__item text feedback__item-text global__item-bg" name="text"
+                        placeholder="Ваше сообщение..."></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="global__inner-btn">
+                  <button class="feedback__btn main-btn global__btn-contact global-btn">
+                    Отправить
+                  </button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="capture">
+        <div class="capture__inner">
+          <ul data-close class="capture__btn">
+            <li class="capture__line close__line1"></li>
+            <li class="capture__line close__line2"></li>
+          </ul>
+          <h2 class="capture__title title">
+            НЕ НАШЛИ ЧТО ИСКАЛИ?
+          </h2>
+          <p class="capture__text text">
+            Оставьте номер телефона и мы Вам перезвоним!
+          </p>
+          <form class="feedback-form">
+
+
+
+
+            <div class="feedback__input__wrapper capture__item">
+              <div class="global__item-bg">
+                <input class="feedback__item  text" type="text" name="phone" id="phone"
+                  placeholder="+7 (___) ___-__-__"
+                  required>
+              </div>
+            </div>
+
+            <div class="global__inner-btn">
+              <button class="feedback__btn main-btn global__btn-contact global-btn">
+                Перезвоните мне
+              </button>
+            </div>
+
+          </form>
+        </div>
+      </div>
+
+
+
+
+
+
+
 
 
     </main>
