add link in full str

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
           <img class="logo__img" src="images/logo/logo.png" alt="">
         </a>
         <div class="header__contacts">
-          <a class="global__btn-contact global-btn header__phone" href="#">
+          <a class="global__btn-contact global-btn header__phone" href="tel:+79210941255">
             +7 921 094 12 55
           </a>
           <ul class="global__social header__social">
@@ -199,8 +199,8 @@
                   </a>
                 </li>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="about.html">
-                    КОНТАКТЫ
+                  <a class="menu__mobil-list--link" href="jobs.html">
+                    Вакансии
                   </a>
                 </li>
                 <li class="menu__mobil-list">
@@ -424,7 +424,7 @@
             </div>
           </div>
           <div class="global__inner-btn">
-            <a class="global-btn global__btn-contact main-btn" href="#">
+            <a class="global-btn global__btn-contact main-btn" href="about.html">
               УЗНАТЬ БОЛЬШЕ
             </a>
           </div>
@@ -443,7 +443,7 @@
 
         <div class="spec__inner">
           <div class="spec__wrapper-item">
-            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img1.jpg');">
+            <a class="spec__item" href="design.html" style="background-image: url('images/content/spec__img1.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   ПРОЕКТИРОВАНИЕ
@@ -455,7 +455,7 @@
                 </div>
               </div>
             </a>
-            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img2.jpg');">
+            <a class="spec__item" href="construction.html" style="background-image: url('images/content/spec__img2.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   СТРОИТЕЛЬСТВО
@@ -469,7 +469,7 @@
             </a>
           </div>
           <div class="spec__wrapper-item">
-            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img3.jpg');">
+            <a class="spec__item" href="repair.html" style="background-image: url('images/content/spec__img3.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   РЕКОНСТРУКЦИЯ
@@ -481,7 +481,7 @@
                 </div>
               </div>
             </a>
-            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img4.jpg');">
+            <a class="spec__item" href="404.html" style="background-image: url('images/content/spec__img4.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   ОБСЛУЖИВАНИЕ
@@ -574,7 +574,7 @@
 
           </div>
           <div class="global__inner-btn">
-            <a class="benefits__btn global__btn-contact global-btn main-btn" href="#">
+            <a class="benefits__btn global__btn-contact global-btn main-btn" href="about.html">
               УЗНАТЬ О КОМПАНИИ
             </a>
           </div>
@@ -595,7 +595,7 @@
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img8.jpg');">
+            <a class="projects__item" href="product.html" style="background-image: url('images/content/projects__img8.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   08. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
@@ -612,7 +612,8 @@
               </div>
             </a>
 
-            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img4.jpg');">
+            <a class="projects__item" href="product.html"
+              style="background-image: url('images/content/projects__img4.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
@@ -632,7 +633,8 @@
 
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img2.jpg');">
+            <a class="projects__item" href="product.html"
+              style="background-image: url('images/content/projects__img2.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -650,7 +652,8 @@
 
               </div>
             </a>
-            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img10.jpg');">
+            <a class="projects__item" href="product.html"
+              style="background-image: url('images/content/projects__img10.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   10. ДЕТСКИЙ БАССЕЙН
@@ -670,7 +673,7 @@
 
 
         <div class="global__inner-btn">
-          <a class="global-btn main-btn global__btn-contact" href="#">
+          <a class="global-btn main-btn global__btn-contact" href="gallery.html">
             ПОСМОТРЕТЬ ВСЕ РАБОТЫ
           </a>
         </div>
@@ -699,20 +702,16 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  Для того чтобы понять, какой бассейн подойдёт именно вам - предлагаем ознакомиться с различными
-                  типами
-                  чаш
+                  Для того чтобы понять, какая отделка бассейн подойдёт именно вам - предлагаем ознакомиться с различными
+                  вариантами
                   на страницах нашего сайта:
-                  <a class="questions__item-link" href="#">полипропиленовый</a>,
-                  <a class="questions__item-link" href="#">композитный</a>,
-                  <a class="questions__item-link" href="#">бетонный</a>,
-                  или
-                  <a class="questions__item-link" href="#">секционный</a>,
+                  <a class="questions__item-link" href="pvc.html">мозаичный бассейн</a>,
+                  <a class="questions__item-link" href="mosaic.html">пленочный бассейн</a>,
                   <br>
                   <br>
                   или
-                  <a class="questions__item-link" href="#">оставить заявку на
-                    бесплатную консультацию</a>
+                  <span data-modal class="questions__item-link" >оставить заявку на
+                    бесплатную консультацию</span>
                 </p>
               </div>
 
@@ -803,9 +802,9 @@
         </div>
 
         <div class="global__inner-btn">
-          <a class="global__btn-contact main-btn global-btn" href="#">
+          <div data-modal class="global__btn-contact main-btn global-btn" >
             ОСТАЛИСЬ ВОПРОСЫ?
-          </a>
+          </div>
         </div>
 
       </section>
@@ -1118,40 +1117,7 @@
               </div>
             </div>
 
-            <div class="reviews__slider">
-              <div class="reviews__item global__item-bg"
-                style="background-image: url('images/content/reviews__slider-bg12.jpg');">
-                <div class="reviews__item-wrapper">
-                  <div class="reviews__info">
-                    <div class="reviews__info-title">
-                      <img class="reviews__info-img" src="images/icons/man.png" alt="">
-                      <div class="reviews__info-name">
-                        Александр Ростовцев
-                        <div class="reviews__info-name--time">
-                          2 года назад
-                        </div>
-                      </div>
-                    </div>
-                    <div class="reviews__info__wrapper">
-                      <p class="reviews__info-text text">
-                        Хотел поставить газовый котел для подогрева бассейна,но
-                        ребята с линии воды предложили тепловой насос. Не могу
-                        нарадоваться! Отдал в ДВА раза меньше денег чем за
-                        газовый котел. С 11 градусов нагрел бесейн 27 кубов за 1,5
-                        суток до 28 Просто сказка. Дети просто в восторге, не вылазят
-                        от туда. Ребятам огромное спасибо, работу сделали ооочень
-                        качественно и красиво. Профессионалы своего дела 5 баллов!!
-                      </p>
-                      <a class="reviews__info-link text"
-                        href="https://www.google.com/maps/place/%D0%9B%D0%B8%D0%BD%D0%B8%D1%8F+%D0%B2%D0%BE%D0%B4%D1%8B/@59.8643857,30.4180004,17z/data=!4m7!3m6!1s0x46962fc25790f319:0x978429dfc1f443ed!8m2!3d59.864383!4d30.4201891!9m1!1b1">
-                        Больше отзывов на Google... </a>
-                    </div>
-                  </div>
-                  <div class="reviews__img" style="background-image: url('images/content/reviews__slider-img12.jpg');">
-                  </div>
-                </div>
-              </div>
-            </div>
+        
 
             <div class="reviews__slider">
               <div class="reviews__item global__item-bg"
@@ -1274,91 +1240,7 @@
 
 
 
-      <div class="modal">
-        <div class="modal__inner">
-          <div class="container">
-            <div class="modal__wrapper">
 
-              <ul data-close class="close__btn">
-                <li class="close__line close__line1"></li>
-                <li class="close__line close__line2"></li>
-              </ul>
-
-              <h2 class="modal__title title">
-                Оставить заявку
-              </h2>
-
-              <form class="feedback-form">
-                <div class="feedback__inner">
-
-
-                  <div class="feedback__wrapper">
-                    <div class="feedback__input__wrapper">
-                      <div class="global__item-bg">
-                        <input class="feedback__item text" type="text" name="name" placeholder="Ваше имя..." required>
-                      </div>
-                    </div>
-                    <div class="feedback__input__wrapper">
-                      <div class="global__item-bg">
-                        <input class="feedback__item text" type="text" name="phone" id="phone"
-                          placeholder="+7 (___) ___-__-__" required>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="feedback__input__wrapper">
-                    <div class="global__item-bg">
-                      <textarea class="feedback__item text feedback__item-text global__item-bg" name="text"
-                        placeholder="Ваше сообщение..."></textarea>
-                    </div>
-                  </div>
-                </div>
-                <div class="global__inner-btn">
-                  <button class="feedback__btn main-btn global__btn-contact global-btn">
-                    Отправить
-                  </button>
-                </div>
-
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="capture" id="leave">
-        <div class="capture__inner">
-          <ul class="capture__btn"
-            onclick="document.getElementById('leave').style.display='none'; return false;">
-            <li class="capture__line close__line1"></li>
-            <li class="capture__line close__line2"></li>
-          </ul>
-          <h2 class="capture__title title">
-            НЕ НАШЛИ ЧТО ИСКАЛИ?
-          </h2>
-          <p class="capture__text text">
-            Оставьте номер телефона и мы Вам перезвоним!
-          </p>
-          <form class="feedback-form">
-
-
-
-
-            <div class="feedback__input__wrapper capture__item">
-              <div class="global__item-bg">
-                <input class="feedback__item  text" type="text" name="phone" id="phone"
-                  placeholder="+7 (___) ___-__-__"
-                  required>
-              </div>
-            </div>
-
-            <div class="global__inner-btn">
-              <button class="feedback__btn main-btn global__btn-contact global-btn">
-                Перезвоните мне
-              </button>
-            </div>
-
-          </form>
-        </div>
-      </div>
 
 
 
@@ -1658,7 +1540,89 @@
     </footer>
 
 
+      <div class="modal">
+        <div class="modal__inner">
+          <div class="container">
+            <div class="modal__wrapper">
 
+              <ul data-close class="close__btn">
+                <li class="close__line close__line1"></li>
+                <li class="close__line close__line2"></li>
+              </ul>
+
+              <h2 class="modal__title title">
+                Оставить заявку
+              </h2>
+
+              <form class="feedback-form">
+                <div class="feedback__inner">
+
+
+                  <div class="feedback__wrapper">
+                    <div class="feedback__input__wrapper">
+                      <div class="global__item-bg">
+                        <input class="feedback__item text" type="text" name="name" placeholder="Ваше имя..." required>
+                      </div>
+                    </div>
+                    <div class="feedback__input__wrapper">
+                      <div class="global__item-bg">
+                        <input class="feedback__item text" type="text" name="phone" id="phone"
+                          placeholder="+7 (___) ___-__-__" required>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="feedback__input__wrapper">
+                    <div class="global__item-bg">
+                      <textarea class="feedback__item text feedback__item-text global__item-bg" name="text"
+                        placeholder="Ваше сообщение..."></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="global__inner-btn">
+                  <button class="feedback__btn main-btn global__btn-contact global-btn">
+                    Отправить
+                  </button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="capture" id="leave">
+        <div class="capture__inner">
+          <ul class="capture__btn" onclick="document.getElementById('leave').style.display='none'; return false;">
+            <li class="capture__line close__line1"></li>
+            <li class="capture__line close__line2"></li>
+          </ul>
+          <h2 class="capture__title title">
+            НЕ НАШЛИ ЧТО ИСКАЛИ?
+          </h2>
+          <p class="capture__text text">
+            Оставьте номер телефона и мы Вам перезвоним!
+          </p>
+          <form class="feedback-form">
+
+
+
+
+            <div class="feedback__input__wrapper capture__item">
+              <div class="global__item-bg">
+                <input class="feedback__item  text" type="text" name="phone" id="phone" placeholder="+7 (___) ___-__-__"
+                  required>
+              </div>
+            </div>
+
+            <div class="global__inner-btn">
+              <button class="feedback__btn main-btn global__btn-contact global-btn">
+                Перезвоните мне
+              </button>
+            </div>
+
+          </form>
+        </div>
+      </div>
 
 
 
