add border in item product

--- a/app/product.html
+++ b/app/product.html
@@ -428,7 +428,7 @@
                 Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
                 плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
                 химреагентов. Подогрев воды организован от газового котла.
-               
+
 
               </p>
               <div class="product__inner">
@@ -525,22 +525,34 @@
 
           <div class="slider-nav">
             <div class="product2">
-              <img class="product2-img" src="images/content/product1.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product1.jpg" alt="">
+              </div>
             </div>
             <div class="product2">
-              <img class="product2-img" src="images/content/product2.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product2.jpg" alt="">
+              </div>
             </div>
             <div class="product2">
-              <img class="product2-img" src="images/content/product3.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product3.jpg" alt="">
+              </div>
             </div>
             <div class="product2">
-              <img class="product2-img" src="images/content/product4.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product4.jpg" alt="">
+              </div>
             </div>
             <div class="product2">
-              <img class="product2-img" src="images/content/product5.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product5.jpg" alt="">
+              </div>
             </div>
             <div class="product2">
-              <img class="product2-img" src="images/content/product6.jpg" alt="">
+              <div class="product2-wrapper">
+                <img class="product2-img" src="images/content/product6.jpg" alt="">
+              </div>
             </div>
 
           </div>
