add scroll reviews

--- a/app/index.html
+++ b/app/index.html
@@ -811,9 +811,6 @@
 
       <section class="reviews section">
 
-        <h2 class="reviews__title title">
-          ОТЗЫВЫ
-        </h2>
         <div class="reviews__wrapper">
           <div class="reviews__slider__inner">
 
@@ -1117,7 +1114,40 @@
               </div>
             </div>
 
-        
+            <div class="reviews__slider">
+              <div class="reviews__item global__item-bg"
+                style="background-image: url('images/content/reviews__slider-bg12.jpg');">
+                <div class="reviews__item-wrapper">
+                  <div class="reviews__info">
+                    <div class="reviews__info-title">
+                      <img class="reviews__info-img" src="images/icons/man.png" alt="">
+                      <div class="reviews__info-name">
+                        Александр Ростовцев
+                        <div class="reviews__info-name--time">
+                          2 года назад
+                        </div>
+                      </div>
+                    </div>
+                    <div class="reviews__info__wrapper">
+                      <p class="reviews__info-text text">
+                        Хотел поставить газовый котел для подогрева бассейна,но
+                        ребята с линии воды предложили тепловой насос. Не могу
+                        нарадоваться! Отдал в ДВА раза меньше денег чем за
+                        газовый котел. С 11 градусов нагрел бесейн 27 кубов за 1,5
+                        суток до 28 Просто сказка. Дети просто в восторге, не вылазят
+                        от туда. Ребятам огромное спасибо, работу сделали ооочень
+                        качественно и красиво. Профессионалы своего дела 5 баллов!!
+                      </p>
+                      <a class="reviews__info-link text"
+                        href="https://www.google.com/maps/place/%D0%9B%D0%B8%D0%BD%D0%B8%D1%8F+%D0%B2%D0%BE%D0%B4%D1%8B/@59.8643857,30.4180004,17z/data=!4m7!3m6!1s0x46962fc25790f319:0x978429dfc1f443ed!8m2!3d59.864383!4d30.4201891!9m1!1b1">
+                        Больше отзывов на Google... </a>
+                    </div>
+                  </div>
+                  <div class="reviews__img" style="background-image: url('images/content/reviews__slider-img12.jpg');">
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="reviews__slider">
               <div class="reviews__item global__item-bg"
