add link jobs 1 2 3 download pdf

--- a/app/jobs03.html
+++ b/app/jobs03.html
@@ -467,14 +467,14 @@
           </div>
 
           <p class="employee__subtext">
-            Если вас заинтересовала данная вакансия, 
-            <a class="employee__link" href="#">
-              вы можете скачать и
+            Если вас заинтересовала данная вакансия, вы можете
+            <a class="employee__link" href="./images/download/Анкета.pdf" download>
+              скачать и
               заполнить резюме
-            </a> 
-            и отправить его на почту 
-            <a class="employee__link" href="#">info@linwa.ru</a>
-             или в мессенджере Telegram
+            </a>
+            и отправить его на почту
+            <a class="employee__link" href="mailto:info@linwa.ru">info@linwa.ru</a>
+            или в мессенджере Telegram
             <a class="employee__link" href="#"> @Linewater</a>
 
           </p>
